--- a/app.json
+++ b/app.json
@@ -16,7 +16,19 @@
       "output": "single",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font", "expo-web-browser"],
+    "plugins": [
+      "expo-router",
+      "expo-font",
+      "expo-web-browser",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/icon.png",
+          "color": "#4F46E5",
+          "defaultChannel": "daily-reminders"
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     }
